Add image to pepperoni pizza

--- a/recipes/pepperoni_pizza.html
+++ b/recipes/pepperoni_pizza.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Pepperoni Pizza</h1>
+        <img src="../images/Pepperoni_pizza.webp">
         <a href="../index.html">Back to recipes</a>
     </body>
 </html>
