Added recipe to pepperoni pizza page

--- a/recipes/pepperoni_pizza.html
+++ b/recipes/pepperoni_pizza.html
@@ -7,6 +7,25 @@
     <body>
         <h1>Pepperoni Pizza</h1>
         <img src="../images/Pepperoni_pizza.webp">
+        <h2>Desciption</h2>
+        <p>This is a simple and yummy dish to prepare. Who
+            doesn't love a good ol' pepperoni pizza?
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pizza crust</li>
+            <li>1/2 can of pizza sauce</li>
+            <li>1 cup of shredded mozzarella cheese</li>
+            <li>1 package of pepperoni</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 425 degrees</li>
+            <li>Grease pizza pan</li>
+            <li>Top pizza with sauce, cheese, and pepperoni</li>
+            <li>Cook pizza until crust is browned and cheese is bubbly. Takes about 20 minutes.</li>
+            <li>Slice and enjoy</li>
+        </ol>
         <a href="../index.html">Back to recipes</a>
     </body>
 </html>
