--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pepperoni_pizza.html">Pepperoni Pizza</a>
+        <ul>
+            <li><a href="./recipes/pepperoni_pizza.html">Pepperoni Pizza</a></li>
+            <li><a href="./recipes/sausage-casserole.html">Sausage Casserole</a></li>
+            <li><a href="./recipes/chicken-enchiladas.html">Chicken Enchiladas</a></li>
+        </ul>
     </body>
 </html>
